--- a/static/html/index.html
+++ b/static/html/index.html
@@ -19,66 +19,7 @@
   </div>
 </body>
 
-<script type="module">
-  window.onload = () => {
-
-    const form = document.querySelector("#form-upload")
-    const fileInput = document.querySelector("#file-input")
-    const fileName = document.querySelector("#file-name")
-    const fileIcon = document.querySelector("#file-icon")
-    const btnSubmit = document.querySelector("#btn-submit")
-    const btnTrash = document.querySelector("#btn-trash")
-
-    const formState = {
-      initial: {
-        fileName: "Upload a PDF or a TXT",
-        fileIcon: "/static/images/upload.svg",
-        disableSubmit: true
-      },
-      fileSelected: {
-        fileName: "",
-        fileIcon: "/static/images/file.svg",
-        disableSubmit: false
-      }
-    }
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault()
-      const formData = new FormData(form)
-      const response = await fetch(form.action, {
-        method: form.method,
-        body: formData
-      })
-      const data = await response.json()
-      clearForm()
-    })
-
-    fileInput.addEventListener('change', (e) => {
-      formState.fileSelected.fileName = e.target.files[0].name
-      switch (e.target.files[0] ? "fileSelected" : "initial") {
-        case "fileSelected":
-          fileName.innerText = formState.fileSelected.fileName
-          fileIcon.src = formState.fileSelected.fileIcon
-          btnSubmit.disabled = formState.fileSelected.disableSubmit
-          break
-        case "initial":
-          fileName.innerText = formState.initial.fileName
-          fileIcon.src = formState.initial.fileIcon
-          btnSubmit.disabled = formState.initial.disableSubmit
-          break
-      }
-    });
-
-    btnTrash.addEventListener("click", () => clearForm())
-
-    function clearForm() {
-      fileInput.value = null
-      fileName.innerText = formState.initial.fileName
-      fileIcon.src = formState.initial.fileIcon
-      btnSubmit.disabled = formState.initial.disableSubmit
-    }
-  }
-</script>
+<script type="module" src="/static/js/main.js"></script>
 
 </html>
 {{ end }}
@@ -86,7 +27,7 @@
 
 {{ define "form" }}
 <form id="form-upload" action="/api/upload" method="POST" class="flex flex-col justify-center items-center gap-4"
-  enctype="multipart/form-data">
+  enctype="multipart/form-data" accept="application/pdf, text/plain">
   <div
     class="w-56 h-56 bg-blue-900 grid place-content-center rounded-md relative flex flex-col gap-4 border-dashed border text-white border hover:bg-blue-700 transition-colors">
     <img id="file-icon" class="mx-auto size-13 rounded-full bg-stone-100 p-3 pointer-events-none"
